--- a/scihelper_desktop/electronscihelper/css/format.css
+++ b/scihelper_desktop/electronscihelper/css/format.css
@@ -1,6 +1,12 @@
-.label_text{
-    width: 100px;
+.label_text {
+  width: 200px;
+  height: 20px;
 }
-.input_box{
-    width: 400px;
+.input_box {
+  width: 400px;
+  height: 20px;
+  border-bottom: 2px solid #1c8876;
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
 }
