--- a/scihelper_chrome_extension/css/content.css
+++ b/scihelper_chrome_extension/css/content.css
@@ -1,1 +1,2 @@
-.img_find_btn{display:none; position:absolute; cursor:pointer;width: 30px;height: 30px;}
+.img_find_div{display:none; position:absolute; cursor:pointer;width: 30px;height: 30px;}
+.img_find_btn{width: 30px;height: 30px;}
